# memolon-parquet

./: .gitignore  Makefile  README.md  convert.py  pyproject.toml  sample.py
.github/workflows/: ci.yml
