[project]
name = "memolon-parquet"
version = "0.1.0"
description = "MEmoLon Parquet"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.19.1",
    "pyarrow",
    "pyarrow-stubs>=20.0.0.20251215",
    "pytest",
    "ruff>=0.15.6",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["memolon*"]
exclude = ["work", "downloads"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
